# CPU-Adelie

./: .gitattributes  .gitignore  .travis.yml  README.md  helloadelie.txt  isa.md
core/: debug.sh  (+3 more)
simulator/: .gitignore  CMakeLists.txt  Makefile  README.md  asm  asm.cpp  b_handler.cpp  bcvt  decoder.cpp  decoder.hpp  exec.cpp  exec.hpp  fib.s  fib_result.md  globalparam.cpp  globalparam.hpp  isa_check.txt  readme  sim  sim.cpp  sim.hpp
simulator/asm_source/: asm.cpp  asm_globalparam.cpp  asm_globalparam.hpp  encoder.cpp  encoder.hpp  irregular.cpp  irregular.hpp
simulator/bcvt_source/: bcvt.cpp  test2.in
simulator/min-rt/: contest.csv  contest.out  contest.ppm  min-rt.coe  min-rt.s  min-rt_forsim.s  min-rt_forsim_m.s  min-rt_m.s
simulator/sim_source/: decoder.cpp  decoder.hpp  exec.cpp  exec.hpp  globalparam.cpp  globalparam.hpp  sim.cpp
simulator/test/: addtest.s  arithtest1.s  branchtest1.s  cmpl_fib.s  extendisatest.s  extendisatest2.s  fi_handler  fi_handler.cpp  fib10.s  fib_rec.coe  fib_rec.out  fib_rec.s  fib_rec_m.s  mandelbrot.s  rangetest.s  settest.s  test.out  test_endian.s  test_f.coe  test_f.s  test_fcomplex.in  test_fcomplex.s  test_io.coe  test_io.in  test_io.out  test_io.s  test_out.coe  test_out.s  test_r0.coe  test_r0.s  testio.s  timetest1.s  timetest2.s
simulator/test/outputs/: addtest.bin.expected  arithtest1.bin.expected  branchtest1.bin.expected  timetest1.bin.expected  timetest2.bin.expected
simulator/test/pc+=1_ver/: fib1.s  looptest1.s  looptest2.s  m_access1.s
simulator/test/pc1/: fib1.coe  fib1.s  looptest2.s  m_access2.coe
(+1557 files in other folders)
